--- a/C2Dapp/C2Dapp/main.storyboard
+++ b/C2Dapp/C2Dapp/main.storyboard
@@ -132,8 +132,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4F-H8-mIl">
-                                <rect key="frame" x="0.0" y="71" width="320" height="113"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4F-H8-mIl">
+                                <rect key="frame" x="0.0" y="115" width="320" height="113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kZC-rz-pQb">
@@ -172,15 +172,15 @@
                                     <constraint firstAttribute="height" constant="113" id="oML-t5-29z"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Da-bH-ZAS">
-                                <rect key="frame" x="41" y="248" width="239" height="172"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Da-bH-ZAS">
+                                <rect key="frame" x="0.0" y="0.0" width="326" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="V4F-H8-mIl" secondAttribute="centerY" constant="113" id="PVM-X2-Al8"/>
+                            <constraint firstAttribute="centerY" secondItem="V4F-H8-mIl" secondAttribute="centerY" constant="-230" id="PVM-X2-Al8"/>
                             <constraint firstAttribute="centerX" secondItem="V4F-H8-mIl" secondAttribute="centerX" id="iia-ZW-ryd"/>
                         </constraints>
                         <connections>
@@ -189,6 +189,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="J4H-qu-xvq"/>
                     <connections>
+                        <outlet property="detailView" destination="V4F-H8-mIl" id="MOH-rx-F87"/>
                         <outlet property="shopAddress" destination="Xvs-mn-MSf" id="GP1-xh-lzc"/>
                         <outlet property="shopPhoto" destination="6Da-bH-ZAS" id="mLz-FZ-BPi"/>
                         <outlet property="shopPrice" destination="fE2-2p-SgB" id="3tP-52-F7Z"/>
